--- a/v4/index.html
+++ b/v4/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="is">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Verkefni 4 — Lorem ipsum land</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Styles.css">
   </head>
   <body>
     <header>
@@ -31,11 +31,11 @@
         <p><a href="#lorem-ipsum" class="button2">Lesa nánar</a></p>
         </div>
 
-        <img class="mynd" src="myndir/info1.jpg" alt="" />
+        <img class="mynd" src="myndir/info1.jpg" alt="" >
       </section>
 
       <section class="info">
-        <img class="mynd2" src="myndir/info2.jpg" alt="" />
+        <img class="mynd2" src="myndir/info2.jpg" alt="">
         <div class="astaeda">
         <div class="kicker">Ástæða</div>
         <h2>Hverjir nota lorem ipsum?</h2>
@@ -62,7 +62,7 @@
             <a href="#" class="button button-secondary">Læra meira</a>
           </div>
 
-            <img src="myndir/mynd1.jpg" alt="" />
+            <img src="myndir/mynd1.jpg" alt="">
           </section>
 
           <section class="card">
@@ -72,7 +72,7 @@
             <a href="https://catipsum.com/" target="_blank" class="button">Nota cat ipsum</a>
             <a href="#" class="button button-secondary">Læra meira</a>
             </div>
-            <img src="myndir/mynd2.jpg" alt="" />
+            <img src="myndir/mynd2.jpg" alt="">
           </section>
 
           <section class="card">
@@ -88,7 +88,7 @@
             
             <a href="#" class="button button-secondary">Læra meira</a>
           </div>
-            <img src="myndir/mynd3.jpg" alt="" />
+            <img src="myndir/mynd3.jpg" alt="">
           </section>
 
           <section class="card">
@@ -103,12 +103,12 @@
             
             <a href="#" class="button button-secondary">Læra meira</a>
             </div>
-            <img src="myndir/mynd4.jpg" alt="" />
+            <img src="myndir/mynd4.jpg" alt="">
           </section>
         </div>
       </section>
     </main>
-  </div>
+  
   <footer>
     <p>© Lorem ipsum land</p>
   </footer>
