--- a/v5/index.html
+++ b/v5/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="is">
   <head>
-    <meta charset="utf-8">
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
+    <meta charset="utf-8" />
     <title>Verkefni 4 — Lorem ipsum land</title>
     <link
       rel="icon"
       href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22>&lt;text y=%22.9em%22 font-size=%2290%22>⭐️&lt;/text>&lt;/svg>"
     />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles.css" />
     <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="responsive.css">
   </head>
   <body>
     <div class="wrapper">
       <header>
         <div class="content">
-            <h1>Lorem ipsum land</h1>
-            <p>Allt þap lorem ipsum sem þig hefur dreymt um!</p>
-            <p><a href="#lorem-ipsum" class="button">Skoða lorem ipsum</a></p>
+          <h1>Lorem ipsum land</h1>
+          <p>Allt það lorem ipsum sem þig hefur dreymt um!</p>
+          <p><a href="#lorem-ipsum" class="button">Skoða lorem ipsum</a></p>
         </div>
         <div class="protection"></div>
       </header>
@@ -39,7 +34,7 @@
               <p><a href="#lorem-ipsum" class="button">Lesa nánar</a></p>
             </div>
             <div class="image">
-              <img src="myndir/info1.jpg" alt="">
+              <img src="myndir/info1.jpg" alt="" />
             </div>
           </section>
 
@@ -55,7 +50,7 @@
               <p><a href="#lorem-ipsum" class="button">Lesa nánar</a></p>
             </div>
             <div class="image">
-              <img src="myndir/info2.jpg" alt="">
+              <img src="myndir/info2.jpg" alt="" />
             </div>
           </section>
         </div>
@@ -80,7 +75,7 @@
                 </div>
               </div>
               <div class="image">
-                <img src="myndir/mynd1.jpg" alt="">
+                <img src="myndir/mynd1.jpg" alt="" />
               </div>
             </section>
 
@@ -97,7 +92,7 @@
                 </div>
               </div>
               <div class="image">
-                <img src="myndir/mynd2.jpg" alt="">
+                <img src="myndir/mynd2.jpg" alt="" />
               </div>
             </section>
 
@@ -115,7 +110,7 @@
                 </div>
               </div>
               <div class="image">
-                <img src="myndir/mynd3.jpg" alt="">
+                <img src="myndir/mynd3.jpg" alt="" />
               </div>
             </section>
 
@@ -133,7 +128,7 @@
                 </div>
               </div>
               <div class="image">
-                <img src="myndir/mynd4.jpg" alt="">
+                <img src="myndir/mynd4.jpg" alt="" />
               </div>
             </section>
 
