--- a/v6/index.html
+++ b/v6/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="is">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <title>Verkefni 4 — Lorem ipsum land</title>
     <link
       rel="icon"
       href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22>&lt;text y=%22.9em%22 font-size=%2290%22>⭐️&lt;/text>&lt;/svg>"
     />
-    <link rel="stylesheet" href="Styles.css" />
+    <link rel="stylesheet" href="Styles.css" >
     <link rel="stylesheet" href="grid.css">
   </head>
   <body>
@@ -34,7 +34,7 @@
               <p><a href="#lorem-ipsum" class="button">Lesa nánar</a></p>
             </div>
             <div class="image">
-              <img src="myndir/info1.jpg" alt="" />
+              <img src="myndir/info1.jpg" alt="" >
             </div>
           </section>
 
@@ -50,7 +50,7 @@
               <p><a href="#lorem-ipsum" class="button">Lesa nánar</a></p>
             </div>
             <div class="image">
-              <img src="myndir/info2.jpg" alt="" />
+              <img src="myndir/info2.jpg" alt="" >
             </div>
           </section>
         </div>
@@ -75,7 +75,7 @@
                 </div>
               </div>
               <div class="image">
-                <img src="myndir/mynd1.jpg" alt="" />
+                <img src="myndir/mynd1.jpg" alt="" >
               </div>
             </section>
 
@@ -92,7 +92,7 @@
                 </div>
               </div>
               <div class="image">
-                <img src="myndir/mynd2.jpg" alt="" />
+                <img src="myndir/mynd2.jpg" alt="" >
               </div>
             </section>
 
@@ -110,7 +110,7 @@
                 </div>
               </div>
               <div class="image">
-                <img src="myndir/mynd3.jpg" alt="" />
+                <img src="myndir/mynd3.jpg" alt="" >
               </div>
             </section>
 
@@ -128,7 +128,7 @@
                 </div>
               </div>
               <div class="image">
-                <img src="myndir/mynd4.jpg" alt="" />
+                <img src="myndir/mynd4.jpg" alt="" >
               </div>
             </section>
 
